# tennis-elo

./: .bumpversion.cfg  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  WORK_LOG.md  pyproject.toml  requirements.txt  tennis_elo.db
.a0proj/: project.json
.a0proj/memory/: embedding.json  index.faiss  index.pkl  knowledge_import.json
.github/workflows/: ci.yml  release.yml
examples/: predict_match.py
scripts/: bump_version.py  refresh_ratings.py
src/tennis_elo/: __init__.py  database.py  name_resolver.py  prediction_engine.py
tests/: __init__.py  conftest.py  test_prediction.py
